[project]
name = "security-agent-cookbook"
version = "0.1.0"
description = "Practical recipes for building cybersecurity AI agents with LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "skyvanguard", email = "skyvanguard.ia@gmail.com"}]

dependencies = [
    "openai>=1.0",
    "anthropic>=0.20",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
rag = ["chromadb>=0.4", "langchain>=0.1"]
all = ["security-agent-cookbook[rag]"]
dev = ["ruff", "pytest", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100
